--- a/nextflow.config
+++ b/nextflow.config
@@ -1,32 +1,37 @@
 params{
 
-    /* Directories */
-    work_dir    = "/$PWD"
-    input_dir   = "${params.work_dir}/inputs/"
-    output_dir  ="${params.work_dir}/results/"
-    script_dir  ="${params.work_dir}/scripts/"
-    input_pat   =["yri-thin"]
 
-    /* Analysis Parameter */
-    
     // Number of Permutations
-    mperm = 1000
+     mperm = 1
+
+    /* Directories */
+    work_dir    = "$PWD"
+    input_dir   = "${params.work_dir}/inputs"
+    output_dir  ="${params.work_dir}/results/${params.mperm}"
+    script_dir  ="${params.work_dir}/scripts"
+    input_pat   =["HapMap_3_r3_1"]
+
+    /* Analysis Parameters */
+
+    // Number of SNPs per block
+    nblocks = 100
 }
 
 profiles{
 
     standard{
         process.executor = "local"
+        process.maxForks = 2
+        process.cpus = 2
+        process.memory = '5GB'
     }
 
     slurm{
         process.executor = "slurm"
         process.queue = "batch"
-    }
+        process.maxForks = 100
+        process.cpus = 4
+        process.memory = '8GB'
 
-    pbs {
-        process.executor = "pbs"
-        process.queue = "batch"
-        clusterOptions = '-A nemavholaa --ntasks-per-node=1'
     }
 }
